argo-apps/projects/infrastructure/argo-cd/overlays/dev/cloud-lb.yaml
apiVersion: v1
kind: Service
metadata:
  name: argo-cd-lb
  namespace: argo-cd
  annotations:
    # lb.ssccloud.com/service-port: 80
    lb.ssccloud.com/proxy-service-name: kong-gateway-proxy
    lb.ssccloud.com/proxy-service-namespace: kong
    lb.ssccloud.com/hostname: argo.vme-dev
    # lb.ssccloud.com/health-type: response_code
    # lb.ssccloud.com/health-endpoint: /ping
    # lb.ssccloud.com/healthy-response: 200
spec:
  type: LoadBalancer
  externalTrafficPolicy: Local
  loadBalancerClass: lb.ssccloud.com
  allocateLoadBalancerNodePorts: false
  ports:
    - port: 80
      name: http
      targetPort: 8080
