argo-apps/projects/infrastructure/argo-cd/overlays/dev/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-route
  namespace: argo-cd
  annotations:
    cert-manager.io/cluster-issuer: cloudflare-issuer
spec:
  ingressClassName: kong
  tls:
    - secretName: argocd-cert
      hosts:
        - argocd.apps.k8s.vdude.io
  rules:
    - host: argocd.apps.k8s.vdude.io
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: argo-cd-argocd-server
                port:
                  number: 80
